[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/UI.gd" type="Script" id=1]
[ext_resource path="res://sprites/sprGameOver_0.png" type="Texture" id=2]
[ext_resource path="res://audio/sndJump.wav" type="AudioStream" id=3]

[node name="UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="GameOver" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="GameOver"]
margin_left = 10.0
margin_top = 10.0
margin_right = 790.0
margin_bottom = 598.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 300
custom_constants/margin_top = 200
custom_constants/margin_left = 300
custom_constants/margin_bottom = 200
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Menu"]
margin_left = 300.0
margin_top = 200.0
margin_right = 500.0
margin_bottom = 408.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 193.0
margin_bottom = 201.0

[node name="HBoxContainer" type="VBoxContainer" parent="Menu/PanelContainer/VBoxContainer"]
margin_right = 186.0
margin_bottom = 36.0

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 186.0
margin_bottom = 16.0

[node name="Sound" type="HSlider" parent="Menu/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_right = 142.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = -80.0
max_value = 0.0

[node name="Label" type="Label" parent="Menu/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 146.0
margin_top = 1.0
margin_right = 186.0
margin_bottom = 15.0
rect_min_size = Vector2( 40, 0 )
text = "Sound"
align = 2
valign = 1

[node name="Test" type="AudioStreamPlayer" parent="Menu/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
stream = ExtResource( 3 )
bus = "Sound"

[node name="HBoxContainer2" type="HBoxContainer" parent="Menu/PanelContainer/VBoxContainer/HBoxContainer"]
margin_top = 20.0
margin_right = 186.0
margin_bottom = 36.0

[node name="Music" type="HSlider" parent="Menu/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_right = 142.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = -80.0
max_value = 0.0

[node name="Label" type="Label" parent="Menu/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_left = 146.0
margin_top = 1.0
margin_right = 186.0
margin_bottom = 15.0
rect_min_size = Vector2( 40, 0 )
text = "Music"
align = 2
valign = 1

[node name="HSeparator" type="HSeparator" parent="Menu/PanelContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 186.0
margin_bottom = 61.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/PanelContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 186.0
margin_bottom = 145.0

[node name="Fullscreen" type="CheckBox" parent="Menu/PanelContainer/VBoxContainer/VBoxContainer"]
margin_right = 186.0
margin_bottom = 24.0
text = "Fullscreen"
align = 2

[node name="QuietBG" type="CheckBox" parent="Menu/PanelContainer/VBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 186.0
margin_bottom = 52.0
text = "Quiet bg."
align = 2

[node name="VSync" type="CheckBox" parent="Menu/PanelContainer/VBoxContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 186.0
margin_bottom = 80.0
text = "VSync"
align = 2

[node name="HSeparator2" type="HSeparator" parent="Menu/PanelContainer/VBoxContainer"]
margin_top = 149.0
margin_right = 186.0
margin_bottom = 170.0
size_flags_vertical = 3

[node name="HBoxContainer5" type="HBoxContainer" parent="Menu/PanelContainer/VBoxContainer"]
margin_top = 174.0
margin_right = 186.0
margin_bottom = 194.0

[node name="Ok" type="Button" parent="Menu/PanelContainer/VBoxContainer/HBoxContainer5"]
margin_right = 60.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 0 )
text = "OK"

[node name="Back2Title" type="Button" parent="Menu/PanelContainer/VBoxContainer/HBoxContainer5"]
margin_left = 64.0
margin_right = 186.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Back to title"

[connection signal="value_changed" from="Menu/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer/Sound" to="." method="_on_Sound_value_changed"]
[connection signal="value_changed" from="Menu/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer2/Music" to="." method="_on_Music_value_changed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/VBoxContainer/QuietBG" to="." method="_on_QuietBG_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/VBoxContainer/VSync" to="." method="_on_VSync_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/HBoxContainer5/Ok" to="." method="_on_Ok_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/HBoxContainer5/Back2Title" to="." method="_on_Back2Title_pressed"]
